# ongs-ai

./: .gitignore  CLAUDE.md  LEEME-ARRANQUE.md  PROJECT_CONTEXT.md  pyproject.toml
docs/: DEMO.md
engineering/: 06_HISTORICO.md  06_SIGUIENTES_PASOS.md  ADR-001-contrato-de-datos.md  ADR-002-entidad-forma-juridica-antiguedad.md  ADR-004-persistencia-matches-y-aviso-proactivo.md  ADR-005-esqueleto-web-y-auth.md  ADR-006-consola-operador-y-scoring.md  ADR-007-recurrentes-esperadas.md
investigacion/: R1_catalogo_fuentes_subvenciones.xlsx  R1_informe.md
prototipos/: ongs-ai-prototipo.html
scripts/: derivar_recurrentes.py  ejecutar_ingesta.py  importar_prospectos.py  preparar_demo.py  reevaluar_ingesta.py  scrape_feder.py  smoke_bdns.py  smoke_email.py
starter-kit/: 06_SIGUIENTES_PASOS.md  CLAUDE.md
tests/: test_afinidad.py  test_anti_fuga_tenant.py  test_anti_hardcoding.py  test_bdns_concesiones.py  test_captacion_feder.py  test_claude_cli.py  test_consola_acciones.py  test_consola_auth.py  test_consola_estructura.py  test_consola_vistas.py  test_contrato_persistencia.py  test_demo_enlace_integracion.py  test_dominio_entidades.py  test_ejecutar_ingesta.py  test_elegibilidad_deterministas.py  test_enviador_enlace_acceso.py  test_estado_ejecucion.py  test_explicacion_ia_degrada.py  test_explicador_claude_cli.py  test_extraccion_requisitos.py  test_importador_prospectos.py  test_ingesta_bdns.py  test_ingesta_dedupe.py  test_ingesta_estado_promocion.py  test_matching_deteccion.py  test_matching_estado.py  test_notificador_email.py  test_panel.py  test_pasada_ingesta.py  (+14 more)
(+89 files in other folders)
