[project]
name = "ongs-ai"
dynamic = ["version"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.dynamic]
version = {attr = "ongs_ai.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
